--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -18,14 +18,18 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
-                        
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">Book Store</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="GetStudents">Student details</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+
     </header>
    <div class="container">
         <main role="main" class="pb-3">
